@@ -19,6 +19,7 @@ Package org.springframework.osgi.bundle
 Package org.springframework.osgi.compendium
 * improved configuration admin update handling by supporting both container and bean management on the same declaration
 * introduced initialization timeout option to cm-properties
+* introduced lazy initialization option to cm-properties
 
 Package org.springframework.osgi.test
 * added check for unresolved fragments during test startup
